--- a/stylesheets/ff-theme-light.scss
+++ b/stylesheets/ff-theme-light.scss
@@ -1,6 +1,10 @@
 .ff-bg-light {
-    color: $ff-grey-800;
     background-color: $ff-grey-50;
+}
+
+.ff-theme-light {
+
+    color: $ff-grey-800;
 
     /* Core */
 
